src/test/deca/context/invalid/provided/testi35.deca
//Resultats :
//Erreur contextuelle
//Ligne 10 : Right value doesn't match the expected type
class A{
    int x = 2;
    int getX(){
        return this.x;
    }
    void setX(){
        int y = setX();
    }
}
